Bug 284419 - Can sometimes never prompting for password
Summary: Can sometimes never prompting for password
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: auth-handler (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-19 00:08 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-10-19 00:08:25 UTC
Version:           unspecified
OS:                Linux

The auth handler gets stuck in a bit of a loop if "canTryAgain" is false and the password in the wallet is wrong.

It will load the password from the wallet, try it - find it fails. Then exit.
Forcing canTryAgain to true, resulted in the auth-handler waiting from a response from the second auth that never arrives (which sound like a gabble bug, it should at least fail).

Subsequent attempts

Reproducible: Sometimes

Steps to Reproduce:
Create a new google account (just choose any username and password) 



Actual Results:  
Account consistently fails to connect with "Authentication failed"

Expected Results:  
Password prompt after second attempt
Comment 1 David Edmundson 2011-10-21 22:20:42 UTC
[23:15] <drdanz> d_ed: we could try this way... besides passwords, in kwallet it is possible to save other stuff (I still don't know how but it looks like that it is possible) so we could save a map per account containing a value "LastLoginSuccesful"  and if it is false popup the prompt
Comment 2 Daniele E. Domenichelli 2011-10-27 00:25:58 UTC
Git commit d8c783e45f3adce0b7203f08e667a9fef2941980 by Daniele E. Domenichelli.
Committed on 27/10/2011 at 02:12.
Pushed by ddomenichelli into branch 'master'.

Save lastLoginFailed entry in KWallet

This allows to prompt for the password if canTryAgain is false and the
stored password is false

BUG: 284419

M  +6    -1    sasl-auth-op.cpp

http://commits.kde.org/telepathy-auth-handler/d8c783e45f3adce0b7203f08e667a9fef2941980