Save lastLoginFailed entry in KWallet

This allows to prompt for the password if canTryAgain is false and the
stored password is false

BUG: 284419